# earcut

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
examples/: example.rs  profile_loop.rs  visualizer.rs
src/: int.rs  lib.rs
tests/: fixture.rs  int_fixture.rs  simple.rs
tests/fixtures/: bad_diagonals.rs  bad_hole.rs  boxy.rs  building.rs  collinear_diagonal.rs  degenerate.rs  dude.rs  eberly_3.rs  eberly_6.rs  empty_square.rs  filtered_bridge_jhl.rs  hilbert.rs  hole_touching_outer.rs  hourglass.rs  infinite_loop_jhl.rs  issue107.rs  issue111.rs  issue119.rs  issue131.rs  issue142.rs  issue149.rs  issue16.rs  issue17.rs  issue186.rs  issue29.rs  issue34.rs  issue35.rs  issue45.rs  issue52.rs  issue83.rs  mod.rs  outside_ring.rs  rain.rs  self_touching.rs  shared_points.rs  simplified_us_border.rs  steiner.rs  touching2.rs  touching3.rs  touching4.rs  (+13 more)
