[package]
name = "earcut"
version = "0.4.9"
edition = "2024"
description = "A Rust port of the Earcut polygon triangulation library"
authors = ["Taku Fukada <naninunenor@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/earcut"
categories = ["graphics", "science", "no-std"]
include = [
    "/src/**/*.rs",
    "/LICENSE-*",
    "README.md",
    "Cargo.toml",
]

[dependencies]
num-traits = { version = "0.2" }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
